fixing overflow and improved styling

--- a/src/pages/book/style/Book.css
+++ b/src/pages/book/style/Book.css
@@ -1,44 +1,67 @@
 .wrap-book {
-    width: 100%;
-    padding-top: 120px;
-    background-color: var(--backgroundPrimary) !important;
-    color: var(--fontColorPrimary);
-    position: relative;
-    z-index: 0;
+  width: 100%;
+  padding-top: 120px;
+  background-color: var(--backgroundPrimary) !important;
+  color: var(--fontColorPrimary);
+  position: relative;
+  z-index: 0;
 }
 
 .wrap-book .bannerBook {
-    width: 100%;
-    height: 400px;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    object-position: 50% 20%;
-    filter: blur(10px) contrast(60%);
+  width: 100%;
+  height: 400px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  object-position: 50% 20%;
+  filter: blur(10px) contrast(60%);
 }
 
 .wrap-book .ContainerBook {
-    z-index: 5;
+  z-index: 5;
 }
 
 .wrap-book pre {
-    max-width: 736px;
+  max-width: 736px;
 }
 
 .wrap-book .ContainerBook .posterBook {
-    object-fit: cover;
-    width: 303px;
-    height: 427px;
-    border-radius: 10px;
+  object-fit: cover;
+  width: 300px;
+  height: 420px;
+  border-radius: 10px;
 }
 
-.infoBook {
-    padding-right: 30px;
+.infobook {
+  margin: 1em;
+  text-align: center;
 }
 
-.infoBook p {
-    width: 100px;
-    margin: 0;
+.infobook p {
+  width: 100%;
+  margin: 0;
+}
+
+.book__poster-left {
+  width: 300px;
+  height: 420px;
+}
+
+.book__body-right {
+  margin-top: 1em;
+}
+
+@media only screen and (min-width: 992px) {
+  .book__poster-left {
+    position: sticky;
+    top: 4em;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .book__body-right {
+    margin-top: 8em;
+  }
 }
